# rehketo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  eslint.config.js  justfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.cursor/rules/: main.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  python-lint.yml  python-test.yml
alembic/versions/: 0002_initial_chat_schema.py  0003_langgraph_checkpointer.py
deploy/: .env.example  docker-compose.yaml
deploy/bifrost/: config.yaml
deploy/bifrost_data/: config.json
rehketo/: config.py  main.py
rehketo-api/: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  Dockerfile  ROADMAP.md  pyproject.toml
rehketo-api/.github/workflows/: python-lint.yml
rehketo-api/alembic/: env.py
rehketo-api/alembic/versions/: 0001_initial_auth_schema.py  0002_initial_chat_schema.py  0003_langgraph_checkpointer.py  0004_fix_created_at_defaults.py  0005_messages_conversation_created_at_index.py  0006_cascade_deletes.py
rehketo-api/deploy/: .env.example  docker-compose.yaml
rehketo-api/docs/superpowers/plans/: 2026-04-20-plan-2-runs-agent-sse.md
rehketo-api/rehketo/: config.py  main.py
rehketo-api/rehketo/agent/: events.py  llm.py  run.py  title.py
rehketo-api/rehketo/api/: auth_routes.py  conversations.py  docs.py  errors.py  me.py  messages.py  runs.py
rehketo-api/rehketo/auth/: cookies.py  csrf.py  csrf_middleware.py  dependencies.py  sessions.py
rehketo-api/rehketo/cli/: grant_role.py  serve.py
rehketo-api/rehketo/core/: logging.py
rehketo-api/rehketo/db/: models.py
rehketo-api/rehketo/permissions/: actions.py  check.py  roles.py
rehketo-api/rehketo/runs/: registry.py
rehketo-api/roadmap/: permissions.md
rehketo-api/tests/: conftest.py
rehketo-api/tests/e2e/: conftest.py  fake_bifrost.py  test_api_smoke.py  test_browser_flows.py
rehketo-api/tests/e2e/fixtures/: api_server.py  bifrost_server.py  ports.py  ui_build.py
rehketo-api/tests/integration/: _helpers.py  test_agent_canary.py  test_auth_default_role.py  test_auth_devonly_login.py  test_auth_logout.py  test_auth_next_preservation.py  test_auth_oauth_callback.py  test_conversations_create.py  test_conversations_detail.py  test_conversations_patch.py  test_csrf_after_session_renewal.py  test_csrf_enforcement.py  test_db_fixture.py  test_docs_auth_gate.py  test_e2e_chat_smoke.py  test_e2e_smoke.py  test_health.py  test_me.py  test_message_order.py  test_post_messages_kicks_run.py  test_resolve_session.py  test_run_agent_conversation_updated.py  test_run_agent_end_to_end.py  test_run_cancel.py  test_run_cancel_shield.py  test_run_cancel_terminal.py  test_run_ended_terminal_guarantee.py  test_run_outcome_persistence.py  test_session_renewal.py  test_sessions.py  test_sse_csrf_exempt.py  test_sse_resume_by_sequence.py  test_startup_sweep.py  test_title_failure_emits_run_ended.py  test_ui_static_mount.py
rehketo-api/tests/unit/: test_actions_vocabulary.py  test_config.py  test_crypto.py  test_event_bus_contract.py  test_models_compile.py  test_openapi_csrf_scheme.py  test_permissions_check.py
rehketo-ui/: .prettierignore  AGENTS.md  README.md  eslint.config.js  openapi.snapshot.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js
rehketo-ui/e2e/: 401-recovery.e2e.ts  cancel-run.e2e.ts  chat.e2e.ts  rename-archive.e2e.ts
rehketo/agent/: events.py  graph.py  llm.py  run.py  sweep.py  title.py
rehketo/api/: auth_routes.py  conversations.py  docs.py  me.py  messages.py  runs.py
rehketo/auth/: cookies.py  crypto.py  csrf.py  csrf_middleware.py  dependencies.py  entra.py  sessions.py
rehketo/cli/: grant_role.py
rehketo/core/: logging.py
rehketo/db/: __init__.py
rehketo/permissions/: dependencies.py  roles.py
rehketo/runs/: event_bus.py
src/: app.css  app.html
src/lib/: api.spec.ts  api.ts  markdown.dom.spec.ts  markdown.ts  sse.spec.ts  sse.ts
src/routes/: +layout.svelte  +layout.ts
tests/: conftest.py
tests/integration/: test_agent_canary.py  test_auth_callback_error.py  test_auth_default_role.py  test_auth_devonly_login.py  test_auth_login_redirect.py  test_auth_logout.py  test_auth_next_preservation.py  test_auth_oauth_callback.py  test_capabilities.py  test_conversations_delete.py  test_conversations_list.py  test_csrf_enforcement.py  test_db_fixture.py  test_docs_auth_gate.py  test_e2e_chat_smoke.py  test_e2e_smoke.py  test_post_messages_kicks_run.py  test_run_agent_conversation_updated.py  test_run_agent_end_to_end.py  test_run_cancel.py  test_run_cancel_shield.py  test_run_cancel_terminal.py  (+1 more)
tools/: _lint_imports.sh  agent_guards.py  check_contract.py  sync_agent_rules.py
(+50 files in other folders)
