[project]
name = "rehketo"
version = "0.1.0"
description = "API Backend for Rehketo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.4",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]
