[project]
name = "rehketo"
version = "0.1.0"
description = "API Backend for Rehketo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.6",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "psycopg[binary,pool]>=3.2.3",
    "alembic>=1.14.0",
    "msal>=1.31.0",
    "cryptography>=46.0.4",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "testcontainers[postgres]>=4.8.0",
    "respx>=0.22.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "sqlalchemy-stubs>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
exclude-newer = "1 days"
